feature/uxdesign: volume icons, double click handler and list-item + margin list

--- a/css/client.css
+++ b/css/client.css
@@ -9,6 +9,12 @@
     overflow: auto;
 }
 
+#listChannelsDiv ul {
+	list-style: none;
+    margin-left: -14px;
+}
+
 .ui-button {
     margin: 5px;
 }
+
